third_party/WebKit/Source/core/layout/LayoutBox.cpp
@@ -1707,6 +1707,8 @@ LayoutUnit LayoutBox::containingBlockLogicalWidthForContent() const
         return overrideContainingBlockContentLogicalWidth();
 
     LayoutBlock* cb = containingBlock();
+    if (isOutOfFlowPositioned())
+        return cb->clientLogicalWidth();
     return cb->availableLogicalWidth();
 }
 
